--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,45 @@
   <br>
   <br>
 
+
+  <!-- || Gallery4 Frame  -->
+  <div class="card--gallery">
+    <div class="card--gallery-inner">
+
+      <div class="gallery-img-section">
+        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery4Left()"></button>
+        <img id="gallery1-img" class="main-img" src="/images/gallery/music-trainer/capture.jpg">
+        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery4Right()"></button>
+      </div>
+
+      <div class="gallery-right-section">
+        <h3>Educational Project</h3>
+        <p><a href="https://rideoutweb.github.io/personal--music-trainer/" target="_blank">Melodic Trainer<br><i>in-progress</i></a></p>
+        <br>
+        <h4>Tech</h4>
+        <p>CSS GRID, ES6, HTML5</p>
+        <button class="github-btn" type="button"
+          onclick="window.location.href='https://github.com/rideoutweb/personal--music-trainer'" target="_blank">View
+          GitHub Repo</button>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+    <div class="card--gallery-inner" style="overflow-y: scroll;">
+      <p>This project is in progress.
+      </p>
+      <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices.</p>
+      <p></p>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+
+
+
   <div class="banner">
     <div>
       <h2 class="creativity-text">Creativity and logic are not mutually exclusive, I think they go hand in hand.
