--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
 
 <body>
   <div class="top-container">
-    <h1>hi, i'm ash thomas</h1>
+    <h1>hi, i'm ash thomas.</h1>
     <img class="avatar" src="/images/avatar.png">
-    <h2>i'm a web developer.</h2>
+    <h2>i'm a developer & programmer.</h2>
   </div>
 
   <div class="banner">
@@ -35,7 +35,7 @@
 
     <div class="inner-about-container">
       <h2 class="about-title">A bit about me</h2>
-      <p class="about">I'm new to the field and super excited to be here. I was a classical music instructor and
+      <p class="about">I'm new to the field and super excited to be here! I was a classical music instructor and
         performer for 15 years, now I'm moving on.</p>
     </div>
 
@@ -43,6 +43,48 @@
 
   <div class="gallery-container">
     <h2>Here are some examples of my work</h2>
+
+
+    
+
+  <!-- || Gallery4 Frame  -->
+  <div class="card--gallery">
+    <div class="card--gallery-inner">
+
+      <div class="gallery-img-section">
+        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery4Left()"></button>
+        <img id="gallery1-img" class="main-img" src="/images/gallery/music-trainer/capture.jpg">
+        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery4Right()"></button>
+      </div>
+
+      <div class="gallery-right-section">
+        <h3>Educational Project</h3>
+        <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Melodic Trainer<br><i>in-progress</i></a></p>
+        <br>
+        <h4>Tech</h4>
+        <p>CSS GRID, ES6, HTML5</p>
+        <button class="github-btn" type="button"
+          onclick="window.location.href='https://github.com/ashthomasweb/personal--music-trainer'" target="_blank">View
+          GitHub Repo</button>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+    <div class="card--gallery-inner" style="overflow-y: scroll;">
+      <p>This project is in progress.
+      </p>
+      <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices.</p>
+      <p></p>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+
+
+
 
     <!-- || Gallery3 Frame  -->
     <div class="card--gallery">
@@ -61,7 +103,7 @@
           <h4>Tech</h4>
           <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
           <button class="github-btn" type="button"
-            onclick="window.location.href='https://github.com/rideoutweb/template-lumberjack'" target="_blank">View
+            onclick="window.location.href='https://github.com/ashthomasweb/template-lumberjack'" target="_blank">View
             GitHub Repo</button>
         </div>
 
@@ -92,24 +134,26 @@
   <br>
   <br>
   <br>
-  <!-- || Gallery2 Frame  -->
-  <div class="card--gallery">
+
+  
+   <!-- || Gallery5 Frame  -->
+   <div class="card--gallery">
     <div class="card--gallery-inner">
 
       <div class="gallery-img-section">
-        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery2Left()"></button>
-        <img id="gallery2-img" class="main-img" src="/images/gallery/the-arnold-game/arnold-game.png">
-        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery2Right()"></button>
+        <button id="gallery-btn-5" class="gallery-btn g-btn-left" type="button" onclick="gallery5Left()"></button>
+        <img id="gallery5-img" class="main-img" src="/images/gallery/wyldgreens/capture.png">
+        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery5Right()"></button>
       </div>
 
       <div class="gallery-right-section">
-        <h3>Personal Project</h3>
-        <p><a href="https://www.thearnoldgame.com" target="_blank">The Arnold Game</a></p>
+        <h3>Client Project</h3>
+        <p><a href="https://www.wyldgreens.ashthomasweb.com" target="_blank">www.wyldgreens.com</a></p>
         <br>
         <h4>Tech</h4>
-        <p>HTML, CSS, JavaScript, jQuery</p>
+        <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
         <button class="github-btn" type="button"
-          onclick="window.location.href='https://github.com/rideoutweb/personal--the-arnold-game'" target="_blank">View
+          onclick="window.location.href='https://github.com/ashthomasweb/client--loose-leash-dog'" target="_blank">View
           GitHub Repo</button>
       </div>
 
@@ -118,19 +162,23 @@
 
   <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
     <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>"The Arnold Game" was one of the projects in the course I took. I decided to not follow the directions and
-        simply complete the assignment knowing the basic function of a simon game. I incorporated pop-culture sounds and
-        some distractions to make it more fun and difficult. The player can double-click on various background elements
-        and make them slowly change color. Another single-click on that same element will stop the color change.
+      <p>This project was built for a Colorado-based local business. Her business model has been restricted to
+        Instagram, limiting her ability to provide her clientele and community with all that she has to offer. The
+        LumberJack template allows her to showcase her expertise and have a blog generating affiliate links and
+        providing additional learning and enrichment opportunities to her clients. I worked with the owner, matching
+        her business mission statement with a brand sense that appeals to her audience.
       </p>
-      <p>This was my first solo project. I used jQuery for DOM manipulation, JS for control flow, and CSS for
-        animations and transitions. The site is built using CSS Grid to ease in scaling to increased number of squares,
-        or to aid in mobile development. Good luck, don't take Arnold too seriously.</p>
+      <p>Showcasing the client's primary business traffic encourages link-through SEO and grants audience
+        ease-of-access to other materials and monetizable content. Mobile-friendly content creation allows the business
+        owner to produce content more efficiently.</p>
+      <p></p>
     </div>
   </div>
   <br>
   <br>
   <br>
+
+
 
   <!-- || Gallery1 Frame  -->
   <div class="card--gallery">
@@ -149,7 +197,7 @@
         <h4>Tech</h4>
         <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
         <button class="github-btn" type="button"
-          onclick="window.location.href='https://github.com/rideoutweb/client--loose-leash-dog'" target="_blank">View
+          onclick="window.location.href='https://github.com/ashthomasweb/client--loose-leash-dog'" target="_blank">View
           GitHub Repo</button>
       </div>
 
@@ -175,24 +223,26 @@
   <br>
 
 
-  <!-- || Gallery4 Frame  -->
+
+
+  <!-- || Gallery2 Frame  -->
   <div class="card--gallery">
     <div class="card--gallery-inner">
 
       <div class="gallery-img-section">
-        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery4Left()"></button>
-        <img id="gallery1-img" class="main-img" src="/images/gallery/music-trainer/capture.jpg">
-        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery4Right()"></button>
+        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery2Left()"></button>
+        <img id="gallery2-img" class="main-img" src="/images/gallery/the-arnold-game/arnold-game.png">
+        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery2Right()"></button>
       </div>
 
       <div class="gallery-right-section">
-        <h3>Educational Project</h3>
-        <p><a href="https://rideoutweb.github.io/personal--music-trainer/" target="_blank">Melodic Trainer<br><i>in-progress</i></a></p>
+        <h3>Personal Project</h3>
+        <p><a href="https://www.thearnoldgame.com" target="_blank">The Arnold Game</a></p>
         <br>
         <h4>Tech</h4>
-        <p>CSS GRID, ES6, HTML5</p>
+        <p>HTML, CSS, JavaScript, jQuery</p>
         <button class="github-btn" type="button"
-          onclick="window.location.href='https://github.com/rideoutweb/personal--music-trainer'" target="_blank">View
+          onclick="window.location.href='https://github.com/ashthomasweb/personal--the-arnold-game'" target="_blank">View
           GitHub Repo</button>
       </div>
 
@@ -201,15 +251,20 @@
 
   <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
     <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>This project is in progress.
+      <p>"The Arnold Game" was one of the projects in the course I took. I decided to not follow the directions and
+        simply complete the assignment knowing the basic function of a simon game. I incorporated pop-culture sounds and
+        some distractions to make it more fun and difficult. The player can double-click on various background elements
+        and make them slowly change color. Another single-click on that same element will stop the color change.
       </p>
-      <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices.</p>
-      <p></p>
+      <p>This was my first solo project. I used jQuery for DOM manipulation, JS for control flow, and CSS for
+        animations and transitions. The site is built using CSS Grid to ease in scaling to increased number of squares,
+        or to aid in mobile development. Good luck, don't take Arnold too seriously.</p>
     </div>
   </div>
   <br>
   <br>
   <br>
+
 
 
 
