Minor cleanup, project reordering
Moves wyldgreens to the top of the project pane.

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,44 @@
 
 
     
+   <!-- || Gallery5 Frame  -->
+   <div class="card--gallery">
+    <div class="card--gallery-inner">
+
+      <div class="gallery-img-section">
+        <button id="gallery-btn-5" class="gallery-btn g-btn-left" type="button" onclick="gallery5Left()"></button>
+        <img id="gallery5-img" class="main-img" src="/images/gallery/wyldgreens/capture.png">
+        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery5Right()"></button>
+      </div>
+
+      <div class="gallery-right-section">
+        <h3>Client Project</h3>
+        <p><a href="https://www.wyldgreenscom" target="_blank">www.wyldgreens.com</a></p>
+        <br>
+        <h4>Tech</h4>
+        <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
+        <button class="github-btn" type="button"
+          onclick="window.location.href='https://github.com/ashthomasweb/client--wyldgreens'" target="_blank">View
+          GitHub Repo</button>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+    <div class="card--gallery-inner" style="overflow-y: scroll;">
+      <p>This project was built for a Colorado-based local business. They business' main advertising medium is face to face contact and referals, 
+        which needed to be backed up with a webpage easily served up on a customers phone. Delivering all the information and functionality one page 
+        proved to be a challenge more than I expected, and the project quickly grew out of my initially staged plans for development.  
+      </p>
+      <p></p>
+      <p></p>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+
 
   <!-- || Gallery4 Frame  -->
   <div class="card--gallery">
@@ -58,8 +96,8 @@
       </div>
 
       <div class="gallery-right-section">
-        <h3>Educational Project</h3>
-        <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Melodic Trainer<br><i>in-progress</i></a></p>
+        <h3>JavaScript Program</h3>
+        <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer<br><i>in-progress</i></a></p>
         <br>
         <h4>Tech</h4>
         <p>CSS GRID, ES6, HTML5</p>
@@ -136,48 +174,6 @@
   <br>
 
   
-   <!-- || Gallery5 Frame  -->
-   <div class="card--gallery">
-    <div class="card--gallery-inner">
-
-      <div class="gallery-img-section">
-        <button id="gallery-btn-5" class="gallery-btn g-btn-left" type="button" onclick="gallery5Left()"></button>
-        <img id="gallery5-img" class="main-img" src="/images/gallery/wyldgreens/capture.png">
-        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery5Right()"></button>
-      </div>
-
-      <div class="gallery-right-section">
-        <h3>Client Project</h3>
-        <p><a href="https://www.wyldgreens.ashthomasweb.com" target="_blank">www.wyldgreens.com</a></p>
-        <br>
-        <h4>Tech</h4>
-        <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
-        <button class="github-btn" type="button"
-          onclick="window.location.href='https://github.com/ashthomasweb/client--loose-leash-dog'" target="_blank">View
-          GitHub Repo</button>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
-    <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>This project was built for a Colorado-based local business. Her business model has been restricted to
-        Instagram, limiting her ability to provide her clientele and community with all that she has to offer. The
-        LumberJack template allows her to showcase her expertise and have a blog generating affiliate links and
-        providing additional learning and enrichment opportunities to her clients. I worked with the owner, matching
-        her business mission statement with a brand sense that appeals to her audience.
-      </p>
-      <p>Showcasing the client's primary business traffic encourages link-through SEO and grants audience
-        ease-of-access to other materials and monetizable content. Mobile-friendly content creation allows the business
-        owner to produce content more efficiently.</p>
-      <p></p>
-    </div>
-  </div>
-  <br>
-  <br>
-  <br>
-
 
 
   <!-- || Gallery1 Frame  -->
