--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
 
   <!-- Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/whd6rrl.css">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,400;0,700;1,400&family=Sacramento&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,400;0,700;1,400&family=Sacramento&display=swap">
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 
@@ -45,84 +44,81 @@
     <h2>Here are some examples of my work</h2>
 
 
-    
-   <!-- || Gallery5 Frame  -->
-   <div class="card--gallery">
-    <div class="card--gallery-inner">
 
-      <div class="gallery-img-section">
-        <button id="gallery-btn-5" class="gallery-btn g-btn-left" type="button" onclick="gallery5Left()"></button>
-        <img id="gallery5-img" class="main-img" src="/images/gallery/wyldgreens/capture.png">
-        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery5Right()"></button>
+    <!-- || Gallery5 Frame  -->
+    <div class="card--gallery">
+      <div class="card--gallery-inner">
+
+        <div class="gallery-img-section">
+          <button id="gallery-btn-5" class="gallery-btn g-btn-left" type="button" onclick="gallery5Left()"></button>
+          <img id="gallery5-img" class="main-img" src="/images/gallery/wyldgreens/capture.png">
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery5Right()"></button>
+        </div>
+
+        <div class="gallery-right-section">
+          <h3>Client Project</h3>
+          <p><a href="https://www.wyldgreenscom" target="_blank">www.wyldgreens.com</a></p>
+          <br>
+          <h4>Tech</h4>
+          <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
+          <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/client--wyldgreens'" target="_blank">View
+            GitHub Repo</button>
+        </div>
+
       </div>
+    </div>
 
-      <div class="gallery-right-section">
-        <h3>Client Project</h3>
-        <p><a href="https://www.wyldgreenscom" target="_blank">www.wyldgreens.com</a></p>
-        <br>
-        <h4>Tech</h4>
-        <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
-        <button class="github-btn" type="button"
-          onclick="window.location.href='https://github.com/ashthomasweb/client--wyldgreens'" target="_blank">View
-          GitHub Repo</button>
+    <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+      <div class="card--gallery-inner" style="overflow-y: scroll;">
+        <p>This project was built for a Colorado-based local business. The business' main advertising medium is face to face contact and referals,
+          which needed to be backed up with a webpage easily served up on a customers phone. The client requested that all materials be presented on a single page. Delivering all the information and
+          functionality one page
+          proved to be a challenge more than I expected, and the project quickly grew out of my initially staged plans for development.
+        </p>
+        <p>The site runs on a node and express server. The highlights of the site is it's single page nature. It is a landing page, about page, product page and order form at once. It uses a simple
+          parallax on desktop and image background to provide a solid color at the top for legibility, and a Colorado-esque scene at the bottom for customer familiarity and business branding. </p>
+        <p></p>
       </div>
-
     </div>
-  </div>
-
-  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
-    <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>This project was built for a Colorado-based local business. They business' main advertising medium is face to face contact and referals, 
-        which needed to be backed up with a webpage easily served up on a customers phone. Delivering all the information and functionality one page 
-        proved to be a challenge more than I expected, and the project quickly grew out of my initially staged plans for development.  
-      </p>
-      <p></p>
-      <p></p>
-    </div>
-  </div>
-  <br>
-  <br>
-  <br>
+    <br>
+    <br>
+    <br>
 
 
-  <!-- || Gallery4 Frame  -->
-  <div class="card--gallery">
-    <div class="card--gallery-inner">
+    <!-- || Gallery4 Frame  -->
+    <div class="card--gallery">
+      <div class="card--gallery-inner">
 
-      <div class="gallery-img-section">
-        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery4Left()"></button>
-        <img id="gallery1-img" class="main-img" src="/images/gallery/music-trainer/capture.jpg">
-        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery4Right()"></button>
+        <div class="gallery-img-section">
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery4Left()"></button>
+          <img id="gallery1-img" class="main-img" src="/images/gallery/music-trainer/capture.jpg">
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery4Right()"></button>
+        </div>
+
+        <div class="gallery-right-section">
+          <h3>JavaScript Program</h3>
+          <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer<br><i>in-progress</i></a></p>
+          <br>
+          <h4>Tech</h4>
+          <p>CSS GRID, ES6, HTML5</p>
+          <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/personal--music-trainer'" target="_blank">View
+            GitHub Repo</button>
+        </div>
+
       </div>
+    </div>
 
-      <div class="gallery-right-section">
-        <h3>JavaScript Program</h3>
-        <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer<br><i>in-progress</i></a></p>
-        <br>
-        <h4>Tech</h4>
-        <p>CSS GRID, ES6, HTML5</p>
-        <button class="github-btn" type="button"
-          onclick="window.location.href='https://github.com/ashthomasweb/personal--music-trainer'" target="_blank">View
-          GitHub Repo</button>
+    <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+      <div class="card--gallery-inner" style="overflow-y: scroll;">
+        <p>This project is in progress.
+        </p>
+        <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices.</p>
+        <p></p>
       </div>
-
     </div>
-  </div>
-
-  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
-    <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>This project is in progress.
-      </p>
-      <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices.</p>
-      <p></p>
-    </div>
-  </div>
-  <br>
-  <br>
-  <br>
-
-
-
+    <br>
+    <br>
+    <br>
 
     <!-- || Gallery3 Frame  -->
     <div class="card--gallery">
@@ -140,8 +136,7 @@
           <br>
           <h4>Tech</h4>
           <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
-          <button class="github-btn" type="button"
-            onclick="window.location.href='https://github.com/ashthomasweb/template-lumberjack'" target="_blank">View
+          <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/template-lumberjack'" target="_blank">View
             GitHub Repo</button>
         </div>
 
@@ -173,7 +168,7 @@
   <br>
   <br>
 
-  
+
 
 
   <!-- || Gallery1 Frame  -->
@@ -192,8 +187,7 @@
         <br>
         <h4>Tech</h4>
         <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
-        <button class="github-btn" type="button"
-          onclick="window.location.href='https://github.com/ashthomasweb/client--loose-leash-dog'" target="_blank">View
+        <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/client--loose-leash-dog'" target="_blank">View
           GitHub Repo</button>
       </div>
 
@@ -237,8 +231,7 @@
         <br>
         <h4>Tech</h4>
         <p>HTML, CSS, JavaScript, jQuery</p>
-        <button class="github-btn" type="button"
-          onclick="window.location.href='https://github.com/ashthomasweb/personal--the-arnold-game'" target="_blank">View
+        <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/personal--the-arnold-game'" target="_blank">View
           GitHub Repo</button>
       </div>
 
@@ -420,8 +413,7 @@
     <div class="footer-attributions">
       <p>Secure email responder by NodeMailer</p>
       <p>
-        Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
-          href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
       </p>
     </div>
 
