--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,10 @@
 
         <div class="gallery-right-section">
           <h3>Client Project</h3>
-          <p><a href="https://www.wyldgreenscom" target="_blank">www.wyldgreens.com</a></p>
+          <p><a href="https://www.wyldgreens.com" target="_blank">www.wyldgreens.com</a></p>
           <br>
           <h4>Tech</h4>
-          <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
+          <p>Node.js, Express, Ejs, JS, Prismic API, Curator API, NodeMailer</p>
           <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/client--wyldgreens'" target="_blank">View
             GitHub Repo</button>
         </div>
@@ -71,11 +71,12 @@
     <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
       <div class="card--gallery-inner" style="overflow-y: scroll;">
         <p>This project was built for a Colorado-based local business. The business' main advertising medium is face to face contact and referals,
-          which needed to be backed up with a webpage easily served up on a customers phone. The client requested that all materials be presented on a single page. Delivering all the information and
+          which needed to be backed up with a webpage easily served up on a customer's phone. The client requested that all materials be presented on a single page. Delivering all the information and
           functionality one page
           proved to be a challenge more than I expected, and the project quickly grew out of my initially staged plans for development.
         </p>
-        <p>The site runs on a node and express server. The highlights of the site is it's single page nature. It is a landing page, about page, product page and order form at once. It uses a simple
+        <p>The site runs on a node and express server. The highlights of the site is it's single page presentation. It is a landing page, about page, product page and order form at once. It uses a
+          simple
           parallax on desktop and image background to provide a solid color at the top for legibility, and a Colorado-esque scene at the bottom for customer familiarity and business branding. </p>
         <p></p>
       </div>
@@ -97,10 +98,10 @@
 
         <div class="gallery-right-section">
           <h3>JavaScript Program</h3>
-          <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer<br><i>in-progress</i></a></p>
+          <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer & Generator<br><i>on-going development</i></a></p>
           <br>
           <h4>Tech</h4>
-          <p>CSS GRID, ES6, HTML5</p>
+          <p>CSS, ES6, HTML</p>
           <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/personal--music-trainer'" target="_blank">View
             GitHub Repo</button>
         </div>
@@ -110,7 +111,10 @@
 
     <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
       <div class="card--gallery-inner" style="overflow-y: scroll;">
-        <p>This project is in progress.
+        <p>This project is the conclusion to a hypothesis I had while a music teacher. At that time I did not know anything about programming other than it must follow standard logic principles. In
+          short, I theorized that if you put all the 'rules' of music theory into code and allowed for randomization in it's choices, the resultant music would be surprisingly familiar and even sound
+          pretty good at times- with only occasional awkward moments. This project is two-fold, containing a set of practice tools, as well as a music generator. The tools help a student train their
+          ear in the subjects of melody, relative pitch, pitch memory, and tempo.
         </p>
         <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices.</p>
         <p></p>
