Updates music trainer description
Adds information about efficacy of trainer and future plans for music
generator.

--- a/public/index.html
+++ b/public/index.html
@@ -114,10 +114,17 @@
         <p>This project is the conclusion to a hypothesis I had while a music teacher. At that time I did not know anything about programming other than it must follow standard logic principles. In
           short, I theorized that if you put all the 'rules' of music theory into code and allowed for randomization in it's choices, the resultant music would be surprisingly familiar and even sound
           pretty good at times- with only occasional awkward moments. This project is two-fold, containing a set of practice tools, as well as a music generator. The tools help a student train their
-          ear in the subjects of melody, relative pitch, pitch memory, and tempo.
+          ear in the subjects of melody, relative pitch, pitch memory, and tempo. The music generator is a passion project that I will continue to build upon for some time. In time it will not only
+          be an expression of the power of western musical structures, but also a learning device.
         </p>
-        <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices.</p>
-        <p></p>
+        <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices. The music trainer includes a function which allows for different instruments to randomly substitute the
+          primary instrument sound, while still asking the student to repeat the pattern back. For instance, if you play piano, you can select french horn sounds to work with instead. This develops
+          the ear to be sensitive to pitch while listening to instruments outside of their familiarity. The melodic idea consisting of the same note, but different tones/instruments, is called
+          "klangfarbenmelodie". This type of exercise was extremely beneficial to my own ear during my development, and I had a difficult time finding ways to practice this type of hearing. This aural
+          skill proved to be one of the most powerful connection points in the development of my musical ear. This melody trainer facilitates the study of an invaluable skill that is difficult to
+          methodically practice.
+        </p>
+        
       </div>
     </div>
     <br>
