Updates project display
Removes The Arnold Game from the portfolio entirely.

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <div class="inner-about-container">
       <h2 class="about-title">A bit about me</h2>
       <p class="about">I'm new to the field and super excited to be here! I was a classical music instructor and
-        performer for 15 years, now I'm moving on.</p>
+        performer for 10 years, now I'm moving on.</p>
     </div>
 
   </div>
@@ -75,9 +75,9 @@
           functionality one page
           proved to be a challenge more than I expected, and the project quickly grew out of my initially staged plans for development.
         </p>
-        <p>The site runs on a node and express server. The highlights of the site is it's single page presentation. It is a landing page, about page, product page and order form at once. It uses a
+        <p>The site runs on a node and express server. The site is a single page presentation. It is a landing page, about page, product page and order form at once. It uses a
           simple
-          parallax on desktop and image background to provide a solid color at the top for legibility, and a Colorado-esque scene at the bottom for customer familiarity and business branding. </p>
+          parallax on desktop and image background to provide a solid color at the top for legibility and cleanliness, and a Colorado-esque scene at the bottom for customer familiarity and business branding. </p>
         <p></p>
       </div>
     </div>
@@ -227,6 +227,7 @@
 
 
   <!-- || Gallery2 Frame  -->
+<!--   
   <div class="card--gallery">
     <div class="card--gallery-inner">
 
@@ -251,7 +252,7 @@
 
   <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
     <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>"The Arnold Game" was one of the projects in the course I took. I decided to not follow the directions and
+      <p>"The Arnold Game" was one of the projects in the course I took. I decided to and
         simply complete the assignment knowing the basic function of a simon game. I incorporated pop-culture sounds and
         some distractions to make it more fun and difficult. The player can double-click on various background elements
         and make them slowly change color. Another single-click on that same element will stop the color change.
@@ -263,7 +264,7 @@
   </div>
   <br>
   <br>
-  <br>
+  <br> -->
 
 
 
