Updates mailto and nodemailer
.env variables have been reset, working locally.

--- a/public/index.html
+++ b/public/index.html
@@ -413,7 +413,7 @@
         <div id="error" class="response-box">
           <p>Ah bummer!</p>
           <p>Something went wrong. But I've built a backup plan.</p>
-          <p>Here is an old-fashioned mailto:</p>
+          <p>Here is an old-fashioned mailto: <a href="mailto:ashthomasweb@gmail.com">ashthomasweb@gmail.com</a></p>
         </div>
       </div>
 
