--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
           <br>
           <h4>Tech</h4>
           <p>Node.js, Express, Ejs, JS, Prismic API, Curator API, NodeMailer</p>
-          <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/client--wyldgreens'" target="_blank">View
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/client--wyldgreens', target='_blank')">View
             GitHub Repo</button>
         </div>
 
@@ -98,11 +98,11 @@
 
         <div class="gallery-right-section">
           <h3>JavaScript Program</h3>
-          <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer & Generator<br><i>on-going development</i></a></p>
+          <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer & Generator</a><br><i>on-going development</i></p>
           <br>
           <h4>Tech</h4>
           <p>CSS, ES6, HTML</p>
-          <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/personal--music-trainer'" target="_blank">View
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/personal--music-trainer', target='_blank')">View
             GitHub Repo</button>
         </div>
 
@@ -147,7 +147,7 @@
           <br>
           <h4>Tech</h4>
           <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
-          <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/template-lumberjack'" target="_blank">View
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/template--lumberjack', target='_blank')">View
             GitHub Repo</button>
         </div>
 
@@ -180,8 +180,6 @@
   <br>
 
 
-
-
   <!-- || Gallery1 Frame  -->
   <div class="card--gallery">
     <div class="card--gallery-inner">
@@ -194,11 +192,11 @@
 
       <div class="gallery-right-section">
         <h3>Client Project</h3>
-        <p><a href="https://www.dev.looseleashdog.com" target="_blank">www.looseleashdog.com</a></p>
+        <p><a href="https://www.looseleashdog.com" target="_blank">www.looseleashdog.com</a></p>
         <br>
         <h4>Tech</h4>
         <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
-        <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/client--loose-leash-dog'" target="_blank">View
+        <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/client--looseleashdog.com', target='_blank')">View
           GitHub Repo</button>
       </div>
 
@@ -223,61 +221,12 @@
   <br>
   <br>
 
-
-
-
-  <!-- || Gallery2 Frame  -->
-<!--   
-  <div class="card--gallery">
-    <div class="card--gallery-inner">
-
-      <div class="gallery-img-section">
-        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery2Left()"></button>
-        <img id="gallery2-img" class="main-img" src="/images/gallery/the-arnold-game/arnold-game.png">
-        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery2Right()"></button>
-      </div>
-
-      <div class="gallery-right-section">
-        <h3>Personal Project</h3>
-        <p><a href="https://www.thearnoldgame.com" target="_blank">The Arnold Game</a></p>
-        <br>
-        <h4>Tech</h4>
-        <p>HTML, CSS, JavaScript, jQuery</p>
-        <button class="github-btn" type="button" onclick="window.location.href='https://github.com/ashthomasweb/personal--the-arnold-game'" target="_blank">View
-          GitHub Repo</button>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
-    <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>"The Arnold Game" was one of the projects in the course I took. I decided to and
-        simply complete the assignment knowing the basic function of a simon game. I incorporated pop-culture sounds and
-        some distractions to make it more fun and difficult. The player can double-click on various background elements
-        and make them slowly change color. Another single-click on that same element will stop the color change.
-      </p>
-      <p>This was my first solo project. I used jQuery for DOM manipulation, JS for control flow, and CSS for
-        animations and transitions. The site is built using CSS Grid to ease in scaling to increased number of squares,
-        or to aid in mobile development. Good luck, don't take Arnold too seriously.</p>
-    </div>
-  </div>
-  <br>
-  <br>
-  <br> -->
-
-
-
-
   <div class="banner">
     <div>
       <h2 class="creativity-text">Creativity and logic are not mutually exclusive, I think they go hand in hand.
         Organization allows us to communicate effectively and with style.</h2>
     </div>
   </div>
-
-
-
 
   <div class="experience-container">
     <div class="exp-wrap">
