Updates tech stack info
Adjusts tech stack entries for projects.

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
           <p><a href="https://www.wyldgreens.com" target="_blank">www.wyldgreens.com</a></p>
           <br>
           <h4>Tech</h4>
-          <p>Node.js, Express, Ejs, JS, Prismic API, Curator API, NodeMailer</p>
+          <p>Node.js, JS, NodeMailer</p>
           <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/client--wyldgreens', target='_blank')">View
             GitHub Repo</button>
         </div>
@@ -101,7 +101,7 @@
           <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer & Generator</a><br><i>on-going development</i></p>
           <br>
           <h4>Tech</h4>
-          <p>CSS, ES6, HTML</p>
+          <p>ES6, WebAudio</p>
           <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/personal--music-trainer', target='_blank')">View
             GitHub Repo</button>
         </div>
@@ -195,7 +195,7 @@
         <p><a href="https://www.looseleashdog.com" target="_blank">www.looseleashdog.com</a></p>
         <br>
         <h4>Tech</h4>
-        <p>Node.js, Express, Ejs, JS, Prismic, Curator API, NodeMailer</p>
+        <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
         <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/client--looseleashdog.com', target='_blank')">View
           GitHub Repo</button>
       </div>
@@ -206,7 +206,7 @@
   <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
     <div class="card--gallery-inner" style="overflow-y: scroll;">
       <p>This project was built for a local business-woman sole-proprietor. Her business model has been restricted to
-        Instagram, limiting her ability to provide her clientele and community with all that she has to offer. The
+        Instagram, limiting her ability to provide her clientele and community access to her services. The
         LumberJack template allows her to showcase her expertise and have a blog generating affiliate links and
         providing additional learning and enrichment opportunities to her clients. I worked with the owner, matching
         her business mission statement with a brand sense that appeals to her audience.
