--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
       <h2 class="about-title">A bit about me</h2>
       <p class="about">I'm new to the field and super excited to be here! I was a classical music instructor and
         performer for 10 years, now I'm moving on.</p>
+      <button class="github-link" type="button" onclick="window.open('https://github.com/ashthomasweb', target='_blank')">GitHub Profile</button>
+      <!-- <button class="resume-link" type="button" onclick="window.open('https://github.com/ashthomasweb/client--wyldgreens', target='_blank')">Resume</button> -->
     </div>
 
   </div>
@@ -77,13 +79,16 @@
         </p>
         <p>The site runs on a node and express server. The site is a single page presentation. It is a landing page, about page, product page and order form at once. It uses a
           simple
-          parallax on desktop and image background to provide a solid color at the top for legibility and cleanliness, and a Colorado-esque scene at the bottom for customer familiarity and business branding. </p>
+          parallax on desktop and image background to provide a solid color at the top for legibility and cleanliness, and a Colorado-esque scene at the bottom for customer familiarity and business
+          branding. </p>
         <p></p>
       </div>
     </div>
     <br>
     <br>
     <br>
+    <br>
+
 
 
     <!-- || Gallery4 Frame  -->
@@ -124,12 +129,14 @@
           skill proved to be one of the most powerful connection points in the development of my musical ear. This melody trainer facilitates the study of an invaluable skill that is difficult to
           methodically practice.
         </p>
-        
+
       </div>
     </div>
     <br>
     <br>
     <br>
+    <br>
+
 
     <!-- || Gallery3 Frame  -->
     <div class="card--gallery">
@@ -174,49 +181,52 @@
     </div>
 
 
-  </div>
-  <br>
-  <br>
-  <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
-  <!-- || Gallery1 Frame  -->
-  <div class="card--gallery">
-    <div class="card--gallery-inner">
 
-      <div class="gallery-img-section">
-        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery1Left()"></button>
-        <img id="gallery1-img" class="main-img" src="/images/gallery/loose-leash-dog/lld-capture.png">
-        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery1Right()"></button>
+    <!-- || Gallery1 Frame  -->
+    <div class="card--gallery">
+      <div class="card--gallery-inner">
+
+        <div class="gallery-img-section">
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery1Left()"></button>
+          <img id="gallery1-img" class="main-img" src="/images/gallery/loose-leash-dog/lld-capture.png">
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery1Right()"></button>
+        </div>
+
+        <div class="gallery-right-section">
+          <h3>Client Project</h3>
+          <p><a href="https://www.looseleashdog.com" target="_blank">www.looseleashdog.com</a></p>
+          <br>
+          <h4>Tech</h4>
+          <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/client--looseleashdog.com', target='_blank')">View
+            GitHub Repo</button>
+        </div>
+
       </div>
+    </div>
 
-      <div class="gallery-right-section">
-        <h3>Client Project</h3>
-        <p><a href="https://www.looseleashdog.com" target="_blank">www.looseleashdog.com</a></p>
-        <br>
-        <h4>Tech</h4>
-        <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
-        <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/client--looseleashdog.com', target='_blank')">View
-          GitHub Repo</button>
+    <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+      <div class="card--gallery-inner" style="overflow-y: scroll;">
+        <p>This project was built for a local business-woman sole-proprietor. Her business model has been restricted to
+          Instagram, limiting her ability to provide her clientele and community access to her services. The
+          LumberJack template allows her to showcase her expertise and have a blog generating affiliate links and
+          providing additional learning and enrichment opportunities to her clients. I worked with the owner, matching
+          her business mission statement with a brand sense that appeals to her audience.
+        </p>
+        <p>Showcasing the client's primary business traffic encourages link-through SEO and grants audience
+          ease-of-access to other materials and monetizable content. Mobile-friendly content creation allows the business
+          owner to produce content more efficiently.</p>
+        <p></p>
       </div>
-
     </div>
   </div>
 
-  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
-    <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>This project was built for a local business-woman sole-proprietor. Her business model has been restricted to
-        Instagram, limiting her ability to provide her clientele and community access to her services. The
-        LumberJack template allows her to showcase her expertise and have a blog generating affiliate links and
-        providing additional learning and enrichment opportunities to her clients. I worked with the owner, matching
-        her business mission statement with a brand sense that appeals to her audience.
-      </p>
-      <p>Showcasing the client's primary business traffic encourages link-through SEO and grants audience
-        ease-of-access to other materials and monetizable content. Mobile-friendly content creation allows the business
-        owner to produce content more efficiently.</p>
-      <p></p>
-    </div>
-  </div>
   <br>
   <br>
   <br>
@@ -372,7 +382,7 @@
 
   <footer>
     <div class="footer-attributions">
-     
+
     </div>
 
   </footer>
