--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,8 @@
 
     <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
       <div class="card--gallery-inner" style="overflow-y: scroll;">
-        <p>This project was built for a Colorado-based local business. The business' main advertising medium is face to face contact and referals,
-          which needed to be backed up with a webpage easily served up on a customer's phone. The client requested that all materials be presented on a single page. Delivering all the information and
+        <p>This project was built for a Colorado-based local business. The business' main advertising medium is face to face contact and referrals,
+          which needed to be backed up with a website easily served up on a customer's phone. The client requested that all materials be presented on a single page. Delivering all the information and
           functionality one page
           proved to be a challenge more than I expected, and the project quickly grew out of my initially staged plans for development.
         </p>
@@ -167,7 +167,7 @@
           lightweight and integrates third-party services to eliminate update, security, and code-heavy issues.
           Featuring a headless CMS with Prismic, a multi-network aggregator in Curator, and automatic email responses by
           NodeMailer, LumberJack's needs for maintenance and updates are low. Ships with detailed setup instructions
-          accesible by any front-end developer or diligent person.
+          accessible by any front-end developer or diligent person.
         </p>
         <p>Making use of third-party API's keeps the website owner from having to engage with the site code after
           launch, keeping breakage to a minimum. LumberJack's blog is automatically generated using EJS and comes with
