--- a/public/index.html
+++ b/public/index.html
@@ -351,7 +351,7 @@
           <label class="form-title">Contact Email:</label>
           <input class="form-entry" type="email" name="user_email" oninput="formFieldCheck()">
           <div class="stamp-wrap"></div>
-          <!-- <button id="contact-button" class="card-btn-topright" type="submit" >Send</button> -->
+          <button id="contact-button" class="card-btn-topright" type="submit" >Send</button>
 
         </div>
 
