--- a/public/index.html
+++ b/public/index.html
@@ -36,15 +36,12 @@
       <p class="about">I'm new to the field and super excited to be here! I was a classical music instructor and
         performer for 10 years, now I'm moving on.</p>
       <button class="github-link" type="button" onclick="window.open('https://github.com/ashthomasweb', target='_blank')">GitHub Profile</button>
-      <!-- <button class="resume-link" type="button" onclick="window.open('https://github.com/ashthomasweb/client--wyldgreens', target='_blank')">Resume</button> -->
     </div>
 
   </div>
 
   <div class="gallery-container">
     <h2>Here are some examples of my work</h2>
-
-
 
     <!-- || Gallery5 Frame  -->
     <div class="card--gallery">
@@ -83,12 +80,11 @@
         <p></p>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
 
-
+    <br>
+    <br>
+    <br>
+    <br>
 
     <!-- || Gallery4 Frame  -->
     <div class="card--gallery">
@@ -131,59 +127,11 @@
 
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <!-- || Gallery3 Frame  -->
-    <div class="card--gallery">
-      <div class="card--gallery-inner">
-
-        <div class="gallery-img-section">
-          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery3Left()"></button>
-          <img id="gallery3-img" class="main-img" src="/images/gallery/lumber/capture.png">
-          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery3Right()"></button>
-        </div>
-
-        <div class="gallery-right-section">
-          <h3>Full-stack Template</h3>
-          <p><a href="https://www.lumberjack.ashthomasweb.com" target="_blank">LumberJack</a></p>
-          <br>
-          <h4>Tech</h4>
-          <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
-          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/template--lumberjack', target='_blank')">View
-            GitHub Repo</button>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
-      <div class="card--gallery-inner" style="overflow-y: scroll;">
-        <p>"LumberJack" is a full-stack template developed for small businesses and social media creators. The theme is
-          lightweight and integrates third-party services to eliminate update, security, and code-heavy issues.
-          Featuring a headless CMS with Prismic, a multi-network aggregator in Curator, and automatic email responses by
-          NodeMailer, LumberJack's needs for maintenance and updates are low. Ships with detailed setup instructions
-          accessible by any front-end developer or diligent person.
-        </p>
-        <p>Making use of third-party API's keeps the website owner from having to engage with the site code after
-          launch, keeping breakage to a minimum. LumberJack's blog is automatically generated using EJS and comes with
-          a "Custom Type" ready to upload to your Prismic repository. Curator allows owners and creators to build feeds
-          from more than one network, enabling more cross-network audience engagement.
-        </p>
-        <p>Designed for a two-color brand scheme with highly legible greyscale copy. Card elements are modular and can
-          be used in a variety of configurations, color and size. LumberJack is fully compatible with any device.
-        </p>
-      </div>
-    </div>
-
 
     <br>
     <br>
     <br>
     <br>
-
 
 
     <!-- || Gallery1 Frame  -->
@@ -222,6 +170,53 @@
           owner to produce content more efficiently.</p>
         <p></p>
       </div>
+    </div>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <!-- || Gallery3 Frame  -->
+  <div class="card--gallery">
+    <div class="card--gallery-inner">
+
+      <div class="gallery-img-section">
+        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery3Left()"></button>
+        <img id="gallery3-img" class="main-img" src="/images/gallery/lumber/capture.png">
+        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery3Right()"></button>
+      </div>
+
+      <div class="gallery-right-section">
+        <h3>Full-stack Template</h3>
+        <p><a href="https://lumberjack-theme.herokuapp.com/" target="_blank">LumberJack Theme</a></p>
+        <br>
+        <h4>Tech</h4>
+        <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
+        <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/template--lumberjack', target='_blank')">View
+          GitHub Repo</button>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+    <div class="card--gallery-inner" style="overflow-y: scroll;">
+      <p>"LumberJack" is a full-stack template developed for small businesses and social media creators. The theme is
+        lightweight and integrates third-party services to eliminate update, security, and code-heavy issues.
+        Featuring a headless CMS with Prismic, a multi-network aggregator in Curator, and automatic email responses by
+        NodeMailer, LumberJack's needs for maintenance and updates are low. Ships with detailed setup instructions
+        accessible by any front-end developer or diligent person.
+      </p>
+      <p>Making use of third-party API's keeps the website owner from having to engage with the site code after
+        launch, keeping breakage to a minimum. LumberJack's blog is automatically generated using EJS and comes with
+        a "Custom Type" ready to upload to your Prismic repository. Curator allows owners and creators to build feeds
+        from more than one network, enabling more cross-network audience engagement.
+      </p>
+      <p>Designed for a two-color brand scheme with highly legible greyscale copy. Card elements are modular and can
+        be used in a variety of configurations, color and size. LumberJack is fully compatible with any device.
+      </p>
     </div>
   </div>
 
@@ -284,8 +279,7 @@
       <div class="detail-container">
         <div class="exp-cont-inner">
           <p class="exp-text-left">Every challenge in music or with a student is different. However you overcome it, the
-            solution must always function correctly. But the solutions are frequently unique. This appeals to me,
-            writing
+            solution must always function correctly. But the solutions are frequently unique. This appeals to me, writing
             and designing code feels much the same, with the added bonus of showing your work to the world!</p>
         </div>
         <div class="exp-cont-inner">
@@ -299,8 +293,7 @@
   <div class="banner">
     <div>
       <h2 class="creativity-text">I <i>love</i> programming. I want to create things that are permanent. Digital
-        creations are
-        accessible across the globe, and this is <i>exciting</i> to me.</h2>
+        creations are accessible across the globe, and this is <i>exciting</i> to me.</h2>
     </div>
   </div>
 
@@ -350,8 +343,7 @@
           <label class="form-title">Contact Email:</label>
           <input class="form-entry" type="email" name="user_email" oninput="formFieldCheck()">
           <div class="stamp-wrap"></div>
-          <button id="contact-button" class="card-btn-topright" type="submit" >Send</button>
-
+          <button id="contact-button" class="card-btn-topright" type="submit">Send</button>
         </div>
 
         <div class="card-bottom-section">
@@ -380,9 +372,7 @@
 
   <footer>
     <div class="footer-attributions">
-
     </div>
-
   </footer>
   <script src="index.js" charset="utf-8"></script>
 </body>
